--- a/Client/Pages/FileAlibabaCloud.razor
+++ b/Client/Pages/FileAlibabaCloud.razor
@@ -1,4 +1,4 @@
-@page "/fileazure"
+@page "/filealibabaCloud"
 @using System.Text.RegularExpressions
 @using System.IO
 @using System.Collections.Generic
@@ -14,7 +14,7 @@
     <p>@file?.LastModified</p>
 </div>
 
-<button class="btn btn-primary" @onclick="SaveInAzure" >Save in Azure</button>
+<button class="btn btn-primary" @onclick="SaveInAlibabaCloud" >Save in AlibabaCloud</button>
 
 @if(fileList.Count() > 0)
 {
@@ -25,15 +25,17 @@
             </tr>
         </thead>
         <tbody>
-             <tr>
+             
             @foreach (var row in fileList)
             {
-               <td>@row.FileName</td>
-                <td>
-                    <button class="btn btn-secondary" @onclick="()=> DownLoadFile(row.FileName)">Download</button>
-                </td>
+                <tr>
+                <td>@row.FileName</td>
+                    <td>
+                        <button class="btn btn-secondary" @onclick="()=> DownLoadFile(row.FileName)">Download</button>
+                    </td>
+                 </tr>
             }
-             </tr>
+            
         </tbody>
     </table>
 }
@@ -86,7 +88,7 @@
         return list.ToArray();  
     }  
 
-    protected async Task SaveInAzure()
+    protected async Task SaveInAlibabaCloud()
     {
         BlazorFile FileToSave = new BlazorFile();
         FileToSave.FileName = file?.Name;
