--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -18,8 +18,8 @@
             </NavLink>
         </li>
          <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fileazure">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> File Azure
+            <NavLink class="nav-link" href="filealibabaCloud">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> File AlibabaCloud
             </NavLink>
         </li>
     </ul>
