--- a/Client/Pages/FileAlibabaCloud.razor
+++ b/Client/Pages/FileAlibabaCloud.razor
@@ -22,6 +22,7 @@
         <thead>
             <tr>
                 <th>File Name</th>
+                 <th>Action</th>
             </tr>
         </thead>
         <tbody>
